--- a/vsvim/.vsvimrc
+++ b/vsvim/.vsvimrc
@@ -7,3 +7,6 @@ noremap <Leader>j 10j
 noremap <Leader>k 10k
 noremap <Leader>o o<Enter><Esc>O
 noremap <Leader>O O<Enter><Esc>O
+nnoremap <CR> m`o<Esc>``
+nnoremap <S-Enter> m`O<Esc>``
+
